--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "imagemin-pngquant": "^5.0.0",
     "merge": "^1.2.0",
     "rimraf": "^2.6.1",
-    "run-sequence": "^1.2.2",
-    "vinyl-buffer": "^1.0.0"
+    "run-sequence": "^1.2.2"
   },
   "browserslist": [
     "> 1%",
