rangeFilter added in shop

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.2.1",
-    "bootstrap-sass": "^3.3.7"
+    "jquery": "1.11.3",
+    "bootstrap-sass": "^3.3.7",
+    "ion.rangeSlider": "ionrangeslider#^2.1.7"
   }
 }
