fixed header now work with slideout

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,5 @@
     "ion.rangeSlider": "ionrangeslider#^2.1.7",
     "slideout.js": "https://github.com/mango/slideout.git#^1.0.1"
   },
-  "devDependencies": {
-    "slideout.js": "https://github.com/mango/slideout.git#^1.0.1"
-  }
+  "devDependencies": {}
 }
